--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -721,7 +721,7 @@ a.back-to-top:focus {
 3. Hero Area
 ========================================================================== */
 .hero-area-bg {
-  background: url(../img/hero-area2.jpg) no-repeat;
+  background: url(../img/hero-area.jpg) no-repeat;
   background-size: cover;
 }
 
